--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -16,10 +16,10 @@
 
 <div id="socialmedia">
     <div id="socialwrapper">
-    <a href="facebook.html"><img src="images/facebook.png"></img></a>
-    <a href="twitter.html"><img src="images/twitter.png"></img></a>
-    <a href="insta.html"><img src="images/instagram.png"></img></a>
-    <a href="youtube.html"><img src="images/youtube.png"></img></a>
+    <a href="facebook.html"><img src="Noise_Site/images/facebook.png"></img></a>
+    <a href="twitter.html"><img src="Noise_Site/images/twitter.png"></img></a>
+    <a href="insta.html"><img src="Noise_Site/images/instagram.png"></img></a>
+    <a href="youtube.html"><img src="Noise_Site/images/youtube.png"></img></a>
     </div>
 </div>
 </body>
