--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -5,7 +5,7 @@
     </head>
 <body>
     <div id="bgimage"></div>
-    <img id="logo" src="/Noise_Site/images/noiselogo.png" alt="Adam Makes Noise"></img>
+    <img id="logo" src="/images/noiselogo.png" alt="Adam Makes Noise"></img>
     
     <div id="menuboxes">
     <div class="menubox" id="box1"><a href="/shows.html">Shows</a></div>
@@ -16,10 +16,10 @@
 
 <div id="socialmedia">
     <div id="socialwrapper">
-    <a href="facebook.html"><img src="/Noise_Site/images/facebook.png"></img></a>
-    <a href="twitter.html"><img src="/Noise_Site/images/twitter.png"></img></a>
-    <a href="insta.html"><img src="/Noise_Site/images/instagram.png"></img></a>
-    <a href="youtube.html"><img src="/Noise_Site/images/youtube.png"></img></a>
+    <a href="facebook.html"><img src="/images/facebook.png"></img></a>
+    <a href="twitter.html"><img src="/images/twitter.png"></img></a>
+    <a href="insta.html"><img src="/images/instagram.png"></img></a>
+    <a href="youtube.html"><img src="/images/youtube.png"></img></a>
     </div>
 </div>
 </body>
