--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/noise.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/noise.css"/>
           <title>Adam Makes Noise - Live Music from the Boston Area</title>
     </head>
 <body>
