--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -11,10 +11,12 @@
     <div class="menubox" id="box1"><a href="/shows.html">Shows</a></div>
     <div class="menubox" id="box2"><a href="/music.html">Music</a></div>
     <div class="menubox" id="box3"><a href="/contact.html">Contact</a></div>
-        FFFF
+        
 
     </div>
 
+    <div> <h1>Hello World</h1></div>
+    
 <div id="socialmedia">
     <div id="socialwrapper">
     <a href="facebook.html"><img src="/images/facebook.png"></img></a>
