--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="Noise_Site/css/noise.css"/>
+    <link rel="stylesheet" type="text/css" href="/Noise_Site/css/noise.css"/>
           <title>Adam Makes Noise - Live Music from the Boston Area</title>
     </head>
 <body>
     <div id="bgimage"></div>
-    <img id="logo" src="Noise_Site/images/noiselogo.png" alt="Adam Makes Noise"></img>
+    <img id="logo" src="/Noise_Site/images/noiselogo.png" alt="Adam Makes Noise"></img>
     
     <div id="menuboxes">
     <div class="menubox" id="box1"><a href="/shows.html">Shows</a></div>
@@ -15,14 +15,14 @@
 
     </div>
 
-    <div> <h1>Hello World</h1></div>
+    <div> <h1>2Hello World</h1></div>
     
 <div id="socialmedia">
     <div id="socialwrapper">
-    <a href="facebook.html"><img src="Noise_Site/images/facebook.png"></img></a>
-    <a href="twitter.html"><img src="Noise_Site/images/twitter.png"></img></a>
-    <a href="insta.html"><img src="Noise_Site/images/instagram.png"></img></a>
-    <a href="youtube.html"><img src="Noise_Site/images/youtube.png"></img></a>
+    <a href="facebook.html"><img src="/Noise_Site/images/facebook.png"></img></a>
+    <a href="twitter.html"><img src="/Noise_Site/images/twitter.png"></img></a>
+    <a href="insta.html"><img src="/Noise_Site/images/instagram.png"></img></a>
+    <a href="youtube.html"><img src="/Noise_Site/images/youtube.png"></img></a>
     </div>
 </div>
 </body>
