--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -5,7 +5,7 @@
     </head>
 <body>
     <div id="bgimage"></div>
-    <img id="logo" src="/images/noiselogo.png" alt="Adam Makes Noise"></img>
+    <img id="logo" src="/Noise_Site/images/noiselogo.png" alt="Adam Makes Noise"></img>
     
     <div id="menuboxes">
     <div class="menubox" id="box1"><a href="/shows.html">Shows</a></div>
