--- a/Noise_Site/index.html
+++ b/Noise_Site/index.html
@@ -5,7 +5,7 @@
     </head>
 <body>
     <div id="bgimage"></div>
-    <img id="logo" src="/images/noiselogo.png" alt="Adam Makes Noise"></img>
+    <img id="logo" src="/Noise_Site/images/noiselogo.png" alt="Adam Makes Noise"></img>
     <div id="flavortext">All the hits you know, love, <i>and</i> some you forgot about. I got 60's to Current. I got Hip hop. I got Metal. I got what you need.
         <br><br>Are you ready for the Noise?</div>
     <div id="menuboxes">
