--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
 <a href="mailto:adammakesnoise@icloud.com">adammakesnoise@icloud.com</a> 
 </div>
     </div>
-    <div id="socialmedia">
+    
+    
     <div id="socialwrapper">
+    <div id="socialmedia">
     <a href="facebook.html"><img src="images/facebook.png"></img></a>
     <a href="twitter.html"><img src="images/twitter.png"></img></a>
     <a href="insta.html"><img src="images/instagram.png"></img></a>
     <a href="youtube.html"><img src="images/youtube.png"></img></a>
     </div>
+</div>
+
+
+
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
