--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 </div>
 <button class="collapsible" id="menubox3">Contact</button>
-<div class="content" id="mb3content">
-<a href="mailto:adammakesnoise@icloud.com">adammakesnoise@icloud.com</a> 
+<div class="content" id="mb3content">Drop a line to
+<a href="mailto:adammakesnoise@icloud.com">adammakesnoise@icloud.com</a> for your event, bar, restaurant, or private party needs.
 </div>
     </div>
     
