--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     
     <div id="socialwrapper">
     <div id="socialmedia">
-    <a href="facebook.html"><img src="images/facebook.png"></img></a>
-    <a href="twitter.html"><img src="images/twitter.png"></img></a>
-    <a href="insta.html"><img src="images/instagram.png"></img></a>
-    <a href="youtube.html"><img src="images/youtube.png"></img></a>
+    <a href="http://www.facebook.com/adammakesnoise"><img src="images/facebook.png"></img></a>
+    <a href="http://www.twitter.com/adammakesnoise"><img src="images/twitter.png"></img></a>
+    <a href="http://www.instagram.com/adam.makes.noise"><img src="images/instagram.png"></img></a>
+    <!--a href="youtube.html"><img src="images/youtube.png"></img></a-->
     </div>
 </div>
 
