--- a/edx.html
+++ b/edx.html
@@ -4,7 +4,7 @@
 <style>
     Body {background-color: black;}
     .banner {width:100%; height:150px;}
-    
+    .iframe {width:100%;}
     </style>
 </head>
 
