--- a/edx.html
+++ b/edx.html
@@ -3,16 +3,21 @@
     <Title>Adam Gojanovich - Instructional Technology Specialist - Learning Theories EdX Course</Title>
 <style>
     Body {background-color: black;}
-    .banner {width:100%; height:150px;}
+    .banner {width:100%; height:auto;}
     .iframe {width:1000px; height:600px; text-align:center;}
+    .ban {width:100%; height:200px;}
     </style>
 </head>
 
 <body>
+    <div class="ban">
 <img class="banner" id="topbanner" src="/images/edx/comp.jpg">
-<iframe src="portfolio.html"></iframe>
-<img class="banner" id="botbanner" src="/images/edx/berk.png">
-
+    </div>
+    <div>
+        <iframe src="portfolio.html"></iframe></div>
+<div class="ban">
+    <img class="banner" id="botbanner" src="/images/edx/berk.png">
+    </div>
 
 
 </body>
