--- a/edx.html
+++ b/edx.html
@@ -4,8 +4,8 @@
 <style>
     Body {background-color: black;}
     .banner {width:100%; height:auto;}
-    .iframe {width:1000px; height:600px; text-align:center;}
-    .ban {width:100%; height:200px;}
+    .iframe {positon: relative; width:1000px; height:600px; text-align:center;}
+    .ban {position: relative; width:100%; height:150px;}
     </style>
 </head>
 
