--- a/edx.html
+++ b/edx.html
@@ -3,21 +3,17 @@
     <Title>Adam Gojanovich - Instructional Technology Specialist - Learning Theories EdX Course</Title>
 <style>
     Body {background-color: black;}
-    .banner {width:100%; height:auto;}
-    iframe {positon: relative; width:1000px; height:600px; text-align:center;}
-    .ban {position: relative; width:100%; height:150px;}
+ 
+    .bantop {position: relative; width:100%; height:150px; background-image: ('images/edx/comp.jpg'); background-size: cover;}
+    .banbot {position: relative; width:100%; height:150px; background-image: ('images/edx/berk.png'); background-size: cover;}
     </style>
 </head>
 
 <body>
-    <div class="ban">
-<img class="banner" id="topbanner" src="/images/edx/comp.jpg">
-    </div>
+    <div ="bantop">    </div>
     <div>
         <iframe src="portfolio.html"></iframe></div>
-<div class="ban">
-    <img class="banner" id="botbanner" src="/images/edx/berk.png">
-    </div>
+<div class="banbot">    </div>
 
 
 </body>
