--- a/edx.html
+++ b/edx.html
@@ -12,7 +12,7 @@
 <body>
     <div ="bantop">    </div>
     <div>
-        <iframe src="portfolio.html"></iframe></div>
+        <iframe width=1000 height=600 src="portfolio.html"></iframe></div>
 <div class="banbot">    </div>
 
 
