--- a/edx.html
+++ b/edx.html
@@ -6,13 +6,16 @@
  
     .bantop {position: relative; width:100%; height:150px; background-image: ('images/edx/comp.jpg'); background-size: cover;}
     .banbot {position: relative; width:100%; height:150px; background-image: ('images/edx/berk.png'); background-size: cover;}
-    </style>
+    .frame {position: relative; text-align:center;}
+    .content {width:100%;}
+        </style>
 </head>
 
 <body>
-    <div ="bantop">    </div>
-    <div>
-        <iframe width=1000 height=600 src="portfolio.html"></iframe></div>
+    <div class="bantop">    </div>
+   <div class="content">
+    <div class="frame">
+        <iframe width=1000 height=600 border=0 src="portfolio.html"></iframe></div></div>
 <div class="banbot">    </div>
 
 
