--- a/edx.html
+++ b/edx.html
@@ -1,21 +1,23 @@
+
 <HTML>
     <head>
     <Title>Adam Gojanovich - Instructional Technology Specialist - Learning Theories EdX Course</Title>
 <style>
-    Body {background-color: black;}
- 
-    .bantop {position: relative; width:100%; height:150px; background-image: ('images/edx/comp.jpg'); background-size: cover;}
-    .banbot {position: relative; width:100%; height:150px; background-image: ('images/edx/berk.png'); background-size: cover;}
+    html, Body {background-color: black; margin:0; padding:0;}
+    .bantop {width:100%; height:200px; background-image: url('http://adammakesnoise.com/images/edx/comp.jpg'); background-size: cover; background-position: bottom;}
+    .banbot {width:100%; height:200px; background-image: url('http://adammakesnoise.com/images/edx/berk.png'); background-size: cover; background-position: center;}
     .frame {position: relative; text-align:center;}
     .content {width:100%;}
         </style>
 </head>
 
 <body>
-    <div class="bantop">    </div>
-   <div class="content">
+    <div class="bantop">  </div>
+    <div class="content">
     <div class="frame">
-        <iframe width=1000 height=600 border=0 src="portfolio.html"></iframe></div></div>
+        <iframe width=1000 height=500 frameborder=none src="http://adammakesnoise.com/portfolio.html"></iframe>
+        </div>
+    </div>
 <div class="banbot">    </div>
 
 
