--- a/edx.html
+++ b/edx.html
@@ -3,7 +3,7 @@
     <head>
     <Title>Adam Gojanovich - Instructional Technology Specialist - Learning Theories EdX Course</Title>
 <style>
-    html, Body {background-color: black; margin:0; padding:0;}
+    html, Body {background-color: #0E2F5C; margin:0; padding:0;}
     .bantop {width:100%; height:200px; background-image: url('http://adammakesnoise.com/images/edx/comp.jpg'); background-size: cover; background-position: bottom;}
     .banbot {width:100%; height:200px; background-image: url('http://adammakesnoise.com/images/edx/berk.png'); background-size: cover; background-position: center;}
     .frame {position: relative; text-align:center;}
