--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="portfolio_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1000px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?50146"></script>
+		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?39098"></script>
 	</div>
 
 	<!-- end copy -->
@@ -71,9 +71,12 @@
 </div>
 		<div>Behaviorism
 </div>
-		<div>Cognitism
+		<div>Connectivism</div>
+		<div>Cognitivism</div>
+		<div>Cognitism v Connectivism
 
 </div>
+		<div>Overlap</div>
 		<div>Androgogy
 
 </div>
