--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="portfolio_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1000px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?91687"></script>
+		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?73698"></script>
 	</div>
 
 	<!-- end copy -->
@@ -77,6 +77,8 @@
 
 </div>
 		<div>Overlap</div>
+		<div>Click the PDF to open in a new page. 
+</div>
 		<div>Androgogy
 
 </div>
