--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
     <div id="bgimage"></div>
     <img id="logo" src="/images/noiselogo.png" alt="Adam Makes Noise"></img>
-    <div id="flavortext">All the hits you know, love, <i>and</i> some you forgot about. I got 60's to Current. I got Hip hop. I got Metal. I got what you need.
+    <div id="flavortext">Live music that starts at the most. All the hits you know, love, <i>and</i> some you forgot about. I got 60's to Current. I got Hip hop. I got Metal. I got what you need.
      </div>
 
 <div id="menu">
