--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="portfolio_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1000px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?95237"></script>
+		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?89480"></script>
 	</div>
 
 	<!-- end copy -->
@@ -77,12 +77,29 @@
 
 </div>
 		<div>Overlap</div>
-		<div>Click the PDF to open in a new page. 
-</div>
 		<div>Androgogy
 
 </div>
-		<div>Learning Approaches & Authentic Assessment
+		<div>Click the PDF to open in a new page. 
+</div>
+		<div>Learning Approach and Assessment: Gamification
+
+In addition to some of the concepts outlined by Edward R. O’Neill regarding game fundamentals (which rely heavily on sports analogies), I think there are two additional things that are fundamental in video games that aid in engagement. I am applying these ideas to my learning scenario. They are:
+
+
+Fantastic, Unlikely, or Questionable GoalsUnlike sports and other “reality” based games, video games often are based on performing actions that one could not - or in some cases should not - perform in the real world. Street racing, fighting aliens or zombies, building giant castles from tiny blocks, guiding entire civilizations to grow, and make war or peace. Part of the appeal for many people is to experience something that they’d be unable to feel in reality, or unable to experience without the potential of detrimentally affecting their lives.
+
+CurrencyMany of the articles based on gamification discuss the use of experience points, or achievement points, as opposed to the standard percentage points used in grading. But another common thread in video games is currency. Mario’s coins, Sonic’s rings, gems, rupees, bottle caps are present in nearly any game.  Sometimes they merely raise the amount of points received upon completion of a level. But other times they can be used to protect you from a failure, give you a second chance, or let you procure gear or items that will allow you to progress through a challenge that you may not be fully prepared for. Getting stuck in a game is a motivation staller, and currency can often help prevent getting stuck.
+
+A Learning ScenarioA colleague that is an art history professor teaches a class that focuses on art theft. I always thought this was such an interesting and engaging way to teach about art. This approach is a brainstorm on how to gamify such a class for a blended platform. Goals of the class might be that students will be able to:
+Name The most expensive paintings in the worldName The most famous stolen paintings Recognize the works of famous artists who’s paintings have been stolenDescribe Styles and techniques used in said paintingsIn the class, students take on the role of Art Thieves.  They are given a lessons such as:
+Choose a famous painting known for its high price sold at auction. Identify from the painting these criteria: style, a technique used, period, area of origin Based on those criteria, identify 3 other works that you feel would go for a high priceBring these paintings with a description to your “fence” (the teacher) and convince them of their worth. This is done via assignment post onlineTeacher assigns two sets of points. One for experience, based on the  based on the rarity of the works (did you pick the first one on the list in the google search, or did you do some discovery), on one set of value points the accuracy and quality of the descriptions. These points are converted a monetary value for each painting. Experience points count towards a final grade, and towards “levels” which unlock additional extra credit “quests”. Currency points can be used to forgive a missed assignment, or traded in for extra credit on an assessment.As paintings have been “purchased” they are posted on a “missing” list in the course. These paintings can no longer be used in subsequent lessons to force students to identify new worksThe paintings are then discussed in class to highlight before mentioned criteriaAn Assessment
+An online interactive game. This game contains 3 galleries. The student is placed in the first gallery of paintings that are images only without descriptions. The student is given a list of criteria that the “fence” is looking for: An artist, a style, an era, a technique. The student must “steal” a total of 5 paintings from the gallery that reflects one of the criteria. If the painting reflects multiple criteria from that list, an additional value is associated with that painting. There is a time limit of 5 minutes to be in the gallery - this is to prevent the time it would take to look up work or use a google reverse image search. In that time there are 3 options: find all of the paintings you need, escape, or be caught (if time runs out.) If time runs out you only have the paintings you have selected up to that point. If you escape, you can be placed in the second gallery, same time limit and options, but different images and criteria, until you have 5 paintings total. So long as the task is completed, and each painting accurately reflects one of the criteria, the maximum grade is reached. If the paintings reflect multiple criterion per work, then additional currency points are rewarded.
+
+
+Final ThoughtsIn this case both the lessons and the assessment have been gamified. The students are incentivized by experience levels and currency. The fact that paintings are placed on a missing list and cannot be used later in the class encourages students to do the work early on, or to more deeply research. By posting levels and bank value, students have multiple opportunities to be on leader boards. By providing some of these actions online and others in class, it allows for both introverts and extroverts to have the opportunity to speak their mind. Although this requires a large initial investment in the lesson plan and online design, it creates an energetic experience in a subject that is often associated with being limited to quiet and conservative environments.
+
+
 </div>
 		<div>Personal Learning Experiences
 
