--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="portfolio_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1000px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?58302"></script>
+		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?36380"></script>
 	</div>
 
 	<!-- end copy -->
@@ -42,7 +42,7 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>My name is Adam Gojanovich, and I am an Instructional Technology Sepcialst at Berklee College of Music in Boston. I help faculty with technology needs, from recording studio technology and music software, to distance learning concepts and formulating their online courses. I have created this portfolio for the Instructional Design and Technology: Learning Theories Course on EdX.</div>
+		<div>My name is Adam Gojanovich, and I am an Instructional Technology Specialst at Berklee College of Music in Boston. I help faculty with technology needs, from recording studio technology and music software, to distance learning concepts and formulating their online courses. I have created this portfolio for the Instructional Design and Technology: Learning Theories Course on EdX.</div>
 		<div>Andragogy</div>
 		<div>Profile</div>
 		<div>Cognitism & Connectivism</div>
@@ -63,26 +63,55 @@
 		<div>The Learner: Creates learning by compiling knowledge through researchThe Instructor: Presents concepts, links, can facilitate large scale discussions, little presence neededConnections: Learner creates their own learning, can be a social activity as in Cogn. And Const.Notes: Greatly influenced by the widespread knowledge available in the digital age</div>
 		<div>A Behaviorism Learning Scenario ></div>
 		<div>Back</div>
-		<div>Ivan Pavlov was a Russian scientist who lived from 1849 to 1935. He did years of study on digestion in dogs, through creating an exteriorized portion of the dogs stomach. He later studied exteriorized salivary glands in both dogs and humans. Through studying salivary glands, he noticed how dogs would begin to salivate at the thought of it being time to eat, which he called “psychic secretion” - a characteristic of inherent Respondent behavior. His investigation into this gave birth to his famous experiment of ringing a bell before feeding dogs, which caused them to salivate at the sound of the bell without the scent of food being in the air. This was the beginning of Classical Conditioning, which showed how a reaction that would normally take place from one type of stimulus (food/salivation) can be created with an unrelated stimulus that becomes associated (bell ringing/food.)</div>
+		<div>Ivan Pavlov was a Russian scientist who lived from 1849 to 1935. He did years of study on digestion in dogs, through creating an exteriorized portion of the dogs stomach. He later studied exteriorized salivary glands in both dogs and humans. Through studying salivary glands, he noticed how dogs would begin to salivate at the thought of it being time to eat, which he called “psychic secretion” - a characteristic of inherent Respondent behavior. His investigation into this gave birth to his famous experiment of ringing a bell before feeding dogs, which caused them to salivate at the sound of the bell without the scent of food being in the air. This was the beginning of Classical Conditioning, which showed how a reaction that would normally take place from one type of stimulus (food/salivation) can be created with an unrelated stimulus that becomes associated (bell ringing/food.)
+
+McLeod, S. A. (2018, Oct 08). 'Pavlov's dogs.' Retrieved from https://www.simplypsychology.org/pavlov.html
+
+Wikipedia ‘Ivan Pavlov’ (n.d.) https://en.wikipedia.org/wiki/Ivan_Pavlov
+</div>
 		<div>Edward Thorndike was a Massachusettes born psychologist who lived from 1874 to 1949. His theories of Behaviorism focused on Operant behavior - the idea that behavior is the result of consequences of the environment, rather than Pavlov’s inherent behaviors to certain stimuli. He outlined the Law of Effect, that a consequence that reinforces or punishes will create likely predictable responses. The Law of Effect is sometimes compared to the idea of natural selection, where certain individual traits will persist due to environmental factors.
+
+McLeod, S. A. (2018). Edward Thorndike. Retrieved from https://www.simplypsychology.org/edward-thorndike.html
+
+Wikipedia ‘Edward Thorndike’ (n.d.) https://en.wikipedia.org/wiki/Edward_Thorndike
 </div>
 		<div>Alburt Bandura is one of the most well known living psychologists. Born in Canada in 1925, his Social Learning Theory is a transition from traditional behaviorist theory to Cognitive theory. His Idea of Social Learning Theory explains that learning can be a social experience, and that individuals learn behaviors through the observation of others. In this case, the learner does not have to directly experience the stimulus, so much as observe the actions and consequences of others.
+
+McLeod, S. A. (2016, Feb 05). Bandura - social learning theory. Retrieved from https://www.simplypsychology.org/bandura.html Retrieved: 11/20/2018
+
+Wikipedia ‘Albert Bandura’ (n.d.) https://en.wikipedia.org/wiki/Albert_Bandura
 </div>
 		<div>John B. Watson was well known for his conditioning of rats to navigate through a maze to find a food reward at the end. Each time the rats would go through the maze they would do so more quickly and confidently. He would then alter the maze to be shorter - which would cause rats to run into walls - or longer, which would cause the rats to stop at the place the food would normally be, and not notice the reward farther down the hall. He also was known for his experiments on Little Albert, an infant who he was able to create a phobia of rats in, by associating rats with loud noises that would cause the infant to cry. He argued that introspection and consiousness could not be studied, and that the focus of psychology should not be on studying the mind, so much as individual behaviors.
+
+Wikipedia ‘John B. Watson’ (n.d) https://en.wikipedia.org/wiki/John_B._Watson 
+
+
+Robert Kentridge (n.d) 'J.B. Watson, Learning and the Lab Rat’ http://faculty.coe.uh.edu/smcneil/cuin6373/idhistory/watson2.html
 </div>
-		<div>Click an image below to learn more about the psychologist known for their opinions on Behaviorism Learning Theory.
+		<div>Click an image below to learn more about the psychologist known for their opinions on Behaviorism Learning Theory. Images from commons.wikimedia.org
 </div>
 		<div>B. F. Skinner, born in Pennsylvania in 1904, is one of the 20th Centuries most well known and prolific psychologists. He believed that animal and human reaction is exclusively based on stimulus, and that there is no true free will to that effect. He combined the idea of Respondents and Operants, and believed that our behavior is determined by our knowledge of consequences. He also believed in conditioning through introducting multiple stimuli, such as a light that goes on, letting you know a lever can be pressed, which then dispenses a reward. He referred to this as positive reinforcement, and noted that negative reinforcement was equally effective, but did not necessarily have to be punishment. The behavior of carrying a coat on what may be a cold day to prevent freezing falls into his definition of negative reinforcement.
+
+Wikipedia ‘B.F. Skinner’ (n.d.) https://en.wikipedia.org/wiki/B._F._Skinner
+
 </div>
 		<div>Behaviorism
 </div>
+		<div>Educational Broadcasting Corporation (2004) ‘Concept to Classroom: What is constructivism?’ https://www.thirteen.org/edonline/concept2class/constructivism/
+
+
+Alejandra Ch (n.d.) ‘Comparing Learning Theories ~ Behaviorism,
+Cognitivism, Constructivism & Humanistic’ http://www.academia.edu/9332688/Comparing_Learning_Theories_ Behaviorism_Cognitivism_Constructivism_and_Humanistic_Learning_Theories_Comparison_Among_L._Theories
+</div>
 		<div>Overlap</div>
-		<div>Cognitivism</div>
-		<div>Cognitism and conectivism have been utilized regularly in my professional development. Cognitism based learning through experimentation is something that drives much of what I do in software training. To learn software inside and out, one can use previous knowledge to make assumptions about how new software will work, and combine that with willingness to try new paths and buttons, to discover functionality. Additionally, there is so much software support availalbe online, that Connectivsm is a primary modality for discovering better workflows and best practices in a software environment.</div>
-		<div>Connectivism</div>
+		<div>Alejandra Ch (n.d.) ‘Comparing Learning Theories ~ Behaviorism,
+Cognitivism, Constructivism & Humanistic’ http://www.academia.edu/9332688/Comparing_Learning_Theories_ Behaviorism_Cognitivism_Constructivism_and_Humanistic_Learning_Theories_Comparison_Among_L._Theorieskrist2366, "Connectivism (Siemens, Downes)," in Learning Theories, June 1, 2015, https://www.learning-theories.com/connectivism-siemens-downes.html</div>
 		<div>Cognitism and Connectivism
 
 </div>
+		<div>Connectivism</div>
+		<div>Cognitivism</div>
+		<div>Cognitism and conectivism have been utilized regularly in my professional development. Cognitism based learning through experimentation is something that drives much of what I do in software training. To learn software inside and out, one can use previous knowledge to make assumptions about how new software will work, and combine that with willingness to try new paths and buttons, to discover functionality. Additionally, there is so much software support availalbe online, that Connectivsm is a primary modality for discovering better workflows and best practices in a software environment.</div>
 		<div>Androgogy
 
 </div>
